# Bachelor-Thesis

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  combine.py  docker-compose.yml  generate_synthetic.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  YOLOv1Impl.cpp  bench_custom.cpp  bench_tensor.cpp  bench_torch.cpp  inference.cpp  inference_bccd.cpp  inference_synthetic.cpp  overfit_test.cpp  short_pipeline_custom.cpp  short_pipeline_torch.cpp  train_pipeline.cpp  train_pipeline_custom.cpp  train_pipeline_custom_BCCD.cpp  train_pipeline_custom_synthetic.cpp  train_pipeline_torch.cpp  train_pipeline_torch_BCCD.cpp  train_pipeline_torch_synthetic.cpp
docs/dev/: dev-commands.md
include/DeepLearnLib/: BatchNorm2d.hpp  Conv2d.hpp  Dropout.hpp  Flatten.hpp  FullyConnected.hpp  Layer.hpp  LeakyReLU.hpp  MaxPool2d.hpp  Network.hpp  Tensor.hpp  TorchYOLO.hpp  YOLO.hpp  YOLOLoss.hpp  dataset.hpp  model.hpp  tensor.hpp  utils.hpp
src/: BatchNorm2d.cpp  CMakeLists.txt  Conv2d.cpp  Droupout.cpp  Flatten.cpp  FullyConnected.cpp  LeakyReLU.cpp  MaxPool2d.cpp  Network.cpp  Tensor.cpp  TorchYOLO.cpp  YOLO.cpp  YOLOLoss.cpp  dataset.cpp  model.cpp  tensor.cpp  utils.cpp
tests/: CMakeLists.txt  test_main.cpp  test_tensor.cpp
